Centrage des elements de la vue amcharts grace aux balises d'Angular Material. cool !

--- a/partials/amcharts.html
+++ b/partials/amcharts.html
@@ -1,4 +1,4 @@
-<md-content class="md-padding" ng-cloak>
+<md-content class="md-padding" ng-cloak layout="column" layout-align="center center">
     <h1 class="md-display-2">{{ aCCtrl.title }}</h1>
     <div id="amcharts" style="height: 500px; width: 500px;"></div>
 </md-content>
