--- a/partials/highcharts.html
+++ b/partials/highcharts.html
@@ -1,3 +1,4 @@
-<md-content class="md-padding" ng-cloak>
+<md-content class="md-padding" ng-cloak layout="column" layout-align="center center">
     <h1 class="md-display-2">{{ hCCtrl.title }}</h1>
+    <div id="highcharts" style="height: 500px; width: 1000px;"></div>
 </md-content>
