Ajout d'un peu de style pour le graph de D3JS

--- a/style/style.css
+++ b/style/style.css
@@ -46,3 +46,18 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+.bar {
+  fill: #D46B93;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
