--- a/partials/d3js.html
+++ b/partials/d3js.html
@@ -1,3 +1,14 @@
-<md-content class="md-padding" ng-cloak>
+<md-content class="md-padding" ng-cloak layout="column" layout-align="center center">
     <h1 class="md-display-2">{{ DCtrl.title }}</h1>
+    <div layout="column">
+        <h2 class="md-title">Aides par département pour l'année : </h2>
+        <md-input-container>
+            <md-select ng-model="DCtrl.currYear" ng-change="DCtrl.changeYear(DCtrl.currYear)">
+                <md-option ng-repeat="record in DCtrl.data" value="{{ record.year }}">
+                    {{ record.year }}
+                </md-option>
+            </md-select>
+        </md-input-container>
+    </div>
+    <div id="d3js" style="height: 500px; width: 1000px;"></div>
 </md-content>
