--- a/partials/raphaeljs.html
+++ b/partials/raphaeljs.html
@@ -1,3 +1,4 @@
-<md-content class="md-padding" ng-cloak>
+<md-content class="md-padding" ng-cloak layout="column" layout-align="center center">
     <h1 class="md-display-2">{{ RCtrl.title }}</h1>
+    <div id="raphaeljs" style="height: 1000px; width: 1000px; text-align: center;"></div>
 </md-content>
