Rajout des 2 onglets necessaire pour la partie 2, anfin d'accueilir les cartes, avec leur vues partielles

--- a/partials/home.html
+++ b/partials/home.html
@@ -13,6 +13,12 @@
             <md-tab label="raphaelJS" ui-sref="home.raphaeljs">
                 <div ui-view="raphaeljs"></div>
             </md-tab>
+            <md-tab label="Google Map" ui-sref="home.googlemap">
+                <div ui-view="googlemap"></div>
+            </md-tab>
+            <md-tab label="Heat Map" ui-sref="home.heatmap">
+                <div ui-view="heatmap"></div>
+            </md-tab>
         </md-tabs>
     </md-content>
 </div>
