Rajout d'un H2 dans la vue RaphaelJS

--- a/partials/raphaeljs.html
+++ b/partials/raphaeljs.html
@@ -1,4 +1,5 @@
 <md-content class="md-padding" ng-cloak layout="column" layout-align="center center">
     <h1 class="md-display-2">{{ RCtrl.title }}</h1>
+    <h2 class="md-title">Répartition des aides par montant</h2>
     <div id="raphaeljs" style="height: 1000px; width: 1000px; text-align: center;"></div>
 </md-content>
